2007-02-28  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py, jhbuild/config.py,
	jhbuild/defaults.jhbuildrc: support for running make dist, after make,
	before make install, disabled by default.

2007-02-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.18.modules: bumped cairo to 1.3.14

2007-02-27  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.18.modules: metacity has branched for gnome-2-18.

2007-02-24  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: gnome-system-monitor no longer depends
	on libgnomeui, but depends on gnome-vfs and gconf. (closes: #365201)

2007-02-20  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.18.modules: Added gimmie.

2007-02-19  Phil Cowans  <pjc51@cam.ac.uk>

	* modulesets/gnome-2.18.modules: Use trunk for Dasher

2007-02-18  Frederic Peters  <fpeters@0d.be>

	* sample.jhbuildrc: updated to match default module set (gnome-2.16),
	to replace cvs by checkout in checkoutroot and to suggest setting
	MAKEFLAGS instead of MAKE as environment variable for SMP systems.
	(changes suggested by Loic Minier)

2007-02-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: added gnome-main-menu (ex-slab) to
	module set (closes: #364152)

2007-02-16  Behdad Esfahbod  <behdad@gnome.org>

	* modulesets/gnome-2.16.modules: gucharmap has branched for gnome-2-16.

2007-02-16  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.16.modules: use tarballs for opal and pwlib,
	since that's what is currently needed

2007-02-14  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.18.modules: update opal and pwlib

2007-02-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.18.modules: fix typo in glade3

2007-02-13  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.18.modules: add seahorse, network-manager-applet
	and meta-gnome-devtools-suite to meta-gnome-desktop

2007-02-13  Frederic Peters  <fpeters@0d.be>
