@@ -1,5 +1,12 @@
 2007-02-28  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/__init__.py, jhbuild/commands/base.py,
+	jhbuild/frontends/buildscript.py, jhbuild/main.py: let commands.run
+	return a value that will be used as exit code.  Updated buildscript
+	to return 1 if there are any failures.
+
+2007-02-28  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/autotools.py, jhbuild/config.py,
 	jhbuild/defaults.jhbuildrc: support for running make dist, after make,
 	before make install, disabled by default.
